# HFT-prediction-markets

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
config/: config.yaml  secrets.env.example
deploy/: hft-bot.service  setup_ec2.sh
docs/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  RUNBOOK.md  live-test-runner.md
migrations/: 001_initial_schema.sql
scripts/: fetch_market.py
spec/: 01-architecture.md  02-kalshi-integration.md  03-trading-strategy.md  04-risk-management.md  05-technical-implementation.md  06-data-models.md  07-monitoring-ops.md  08-implementation-roadmap.md  README.md
src/: __init__.py  config.py  main.py
src/api/: __init__.py  auth.py  kalshi.py  models.py
src/db/: __init__.py  models.py  repository.py  supabase_client.py
src/execution/: engine.py  order_manager.py  position_tracker.py
src/market/: __init__.py  filters.py  monitor.py  websocket.py
src/risk/: __init__.py  circuit_breakers.py  manager.py  validators.py
src/strategy/: __init__.py  engine.py  exits.py  signals.py
src/tennis/: client.py  scores365_client.py  sofascore_client.py  sportapi7_client.py
src/utils/: email_alerts.py  health.py  logging.py
testing/: api-report.md  data_based_test.py  debug_ws.py  live_test.py  scores365_data.py  sofascore_data.py  sportapi7_data.py  stream.py  tennis_data.py
tests/: __init__.py
tests/unit/: test_kalshi_auth.py  test_kalshi_client.py  test_risk.py  test_strategy.py
